--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-<b> <i> greetings my terrestial beings </i> </b>
-<center>
+<b> <i> <center> greetings my terrestial beings </center> </i> </b>
+
 
 
 
