--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <b> <i> <center> greetings my terrestial beings </center> </i> </b>
 
 
-<body style="background-color:aquamarine;">
-
 
 
 </html>
 
 <style>
-"background-color:pink;"
+<body "background-color:aquamarine;">
   
   
 <style>
