--- a/apps.html
+++ b/apps.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+  
+<body>
+  <center>
+  <nav>
+    <li><a href="index.html"> Home </a> </li>
+    <li><a href="apps.html"> Apps </a> </li>
+  </nav>
+    <br>
+    <br>
+    <br>
+    <br>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/LTw8Ki7A5Q0McKyXUZWS9f5xo2vMfxU5MMblk9gBqro/embed"></iframe>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/YhaZw0k5PkovNnxGG-7Zk-gbnJFNCO8qTi68Tdw93Lo/embed"></iframe>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2wElgMQc282SZlZilv9U2YN2mXphASov1lv-Ff-I52w/embed"></iframe>
