--- a/apps.html
+++ b/apps.html
@@ -20,3 +20,34 @@
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/LTw8Ki7A5Q0McKyXUZWS9f5xo2vMfxU5MMblk9gBqro/embed"></iframe>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/YhaZw0k5PkovNnxGG-7Zk-gbnJFNCO8qTi68Tdw93Lo/embed"></iframe>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2wElgMQc282SZlZilv9U2YN2mXphASov1lv-Ff-I52w/embed"></iframe>
+class{
+  text-allign: center;
+}
+body{
+  background-image:url(https://d28hgpri8am2if.cloudfront.net/tagged_assets/5105171/2133042779_hr.jpg);
+}
+nav {
+  list-style-type: none;
+  background-color: pink;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding:20px;
+  text-shadow: -1px 1px 2px #000,
+}
+a{
+  color: #10DBA1;
+  text-decoration: none;
+  
+}
+li{
+  display: inline;
+  padding: 20px;
+  font-size: 20px;
+}
+li:hover{
+  display:inline;
+  padding:21px;
+  background-color:red;
+}
