--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <center>
 <iframe width="400" height="620" style="border: 10px;" src="https://studio.code.org/projects/applab/LTw8Ki7A5Q0McKyXUZWS9f5xo2vMfxU5MMblk9gBqro/embed"></iframe>
   </center>
+<style>
 h1{
   background-color: green; 
   color: white;
@@ -89,3 +90,4 @@ li:hover{
   padding:20px;
   background-color:red;
 }
+</style>
