--- a/apps.html
+++ b/apps.html
@@ -20,6 +20,7 @@
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/LTw8Ki7A5Q0McKyXUZWS9f5xo2vMfxU5MMblk9gBqro/embed"></iframe>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/YhaZw0k5PkovNnxGG-7Zk-gbnJFNCO8qTi68Tdw93Lo/embed"></iframe>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2wElgMQc282SZlZilv9U2YN2mXphASov1lv-Ff-I52w/embed"></iframe>
+    </html>
 <style>
     class{
   text-allign: center;
