--- a/apps.html
+++ b/apps.html
@@ -12,6 +12,7 @@
   <nav>
     <li><a href="index.html"> Home </a> </li>
     <li><a href="apps.html"> Apps </a> </li>
+    <li><a href="john.html"> John </a> </li>
   </nav>
     <br>
     <br>
