--- a/john.html
+++ b/john.html
@@ -20,3 +20,36 @@
     <br>
 <img src= https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg
  </img>
+<style>
+    class{
+  text-allign: center;
+}
+body{
+  background-image:url(https://d28hgpri8am2if.cloudfront.net/tagged_assets/5105171/2133042779_hr.jpg);
+}
+nav {
+  list-style-type: none;
+  background-color: pink;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding:20px;
+  text-shadow: -1px 1px 2px #000,
+}
+a{
+  color: #10DBA1;
+  text-decoration: none;
+  
+}
+li{
+  display: inline;
+  padding: 20px;
+  font-size: 20px;
+}
+li:hover{
+  display:inline;
+  padding:21px;
+  background-color:red;
+}
+</style>
