--- a/john.html
+++ b/john.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-  
 <body>
   <center>
   <nav>
@@ -37,7 +36,8 @@ nav {
 a{
   color: #10DBA1;
   text-decoration: none;
-  
+body{
+  background-color: black;
 }
 li{
   display: inline;
