--- a/john.html
+++ b/john.html
@@ -19,6 +19,8 @@
     <br>
 <img src= https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg
  </img>
+    </body>
+  </html>
 <style>
     class{
   text-allign: center;
