--- a/john.html
+++ b/john.html
@@ -25,6 +25,9 @@
     class{
   text-allign: center;
 }
+   background{
+   background-color: black; 
+  }
 nav {
   list-style-type: none;
   background-color: pink;
@@ -35,6 +38,7 @@ nav {
   padding:20px;
   text-shadow: -1px 1px 2px #000,
 }
+ 
 a{
   color: #10DBA1;
   text-decoration: none;
