--- a/john.html
+++ b/john.html
@@ -1,2 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+  
+<body>
+  <center>
+  <nav>
+    <li><a href="index.html"> Home </a> </li>
+    <li><a href="apps.html"> Apps </a> </li>
+    <li><a href="john.html"> John </a> </li>
+  </nav>
+  </center>
+  <br>
+  <br>
+  <br>
+  <br>
 <img src= https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg
  </img>
