--- a/john.html
+++ b/john.html
@@ -21,3 +21,32 @@
   <br>
 <img src= https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg
  </img>
+<style>
+nav {
+  list-style-type: none;
+  background-color: pink;
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  left: 0;
+  padding:20px;
+  text-shadow: -1px 1px 2px #000,
+}
+a{
+  color: #10DBA1;
+  text-decoration: none;
+  body{
+  background-color: black;
+  }
+}
+li{
+  display: inline;
+  padding: 20px;
+  font-size: 20px;
+}
+li:hover{
+  display:inline;
+  padding:20px;
+  background-color:red;
+}
+</style>
