--- a/john.html
+++ b/john.html
@@ -19,9 +19,10 @@
   <br>
   <br>
   <br>
-<img src= https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg
- </img>
 <style>
+  body{
+  background-image:url(https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg);
+}
 nav {
   list-style-type: none;
   background-color: pink;
@@ -35,9 +36,6 @@ nav {
 a{
   color: #10DBA1;
   text-decoration: none;
-  body{
-  background-color: black;
-  }
 }
 li{
   display: inline;
