--- a/john.html
+++ b/john.html
@@ -22,6 +22,7 @@
 <style>
   body{
   background-image:url(https://upload.wikimedia.org/wikipedia/commons/7/7e/Floyd_Mayweather%2C_Jr._at_DeWalt_event_%285888721735%29_%28rotated_4%29.jpg);
+    background-size: cover;
 }
 nav {
   list-style-type: none;
